--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-/node_modules
+DesafiosBackend/desafio4/node_modules
+
+DesafiosBackend/desafio4/package.json
+
+DesafiosBackend/desafio4/package-lock.json
+
+node_modules
