--- a/DesafiosBackend/desafio4/package.json
+++ b/DesafiosBackend/desafio4/package.json
@@ -1,7 +1,6 @@
 {
   "name": "desafio4",
   "version": "1.0.0",
-  "description": "",
   "main": "desafio4.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
-  }
+    "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.4",
+    "require": "^2.4.20"
+  },
+  "description": ""
 }
