1er entrega proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,11 @@ DesafiosBackend/desafio4/node_modules
 DesafiosBackend/desafio4/package.json
 
 DesafiosBackend/desafio4/package-lock.json
-
+DesafiosBackend/desafio5
 node_modules
+DesafiosBackend/clase9
+DesafiosBackend/clase10
+DesafiosBackend/clase11
+DesafiosBackend/clase12
+DesafiosBackend/clase13
+DesafiosBackend/clase14
